Fix ImagePicker width on narrow screen

--- a/src/components/form/ImagePicker.scss
+++ b/src/components/form/ImagePicker.scss
@@ -9,6 +9,7 @@
 
 	&__preview {
 		width: 13rem;
+		max-width: 100%;
 		height: 13rem;
 		margin-bottom: 1rem;
 		background-color: $color-input-background;
